Update file add task manager
Update urls, views, urls, add "task manager"

--- a/secapp/templates/partials/_navbar.html
+++ b/secapp/templates/partials/_navbar.html
@@ -10,7 +10,7 @@
         <i class="fa fa-bars"></i>
     </button> -->
     <form class="d-none d-md-flex ms-4">
-        <input class="form-control bg-dark border-0" type="search" placeholder="Search">
+        <!-- <input class="form-control bg-dark border-0" type="search" placeholder="Search"> -->
     </form>
     <div class="navbar-nav align-items-center ms-auto">
         <div class="nav-item dropdown">
@@ -43,23 +43,4 @@
     </div>
 </nav>
 <!-- Navbar End -->
-<script>
-    // document.addEventListener("DOMContentLoaded", function () {
-    //     document.querySelector('#sidebar-toggler').addEventListener('click', function (event) {
-    //         event.preventDefault();
-    //         document.querySelector('#mySidebar').classList.toggle('active');
-    //     });
-    // });
-</script>
-<!-- <style>
-    #mySidebar {
-        /* sidebar active styles */
-        display: block;
-    }
 
-    #mySidebar.active {
-
-        /* sidebar default styles */
-        display: none;
-    }
-</style> -->
