--- a/secapp/templates/partials/_sidebar.html
+++ b/secapp/templates/partials/_sidebar.html
@@ -25,14 +25,16 @@
                     <a href="element.html" class="dropdown-item">Other Elements</a>
                 </div>
             </div> -->
+            
             <a href="/eventlog" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Event Logs</a>
             <a href="/iplogs" class="nav-item nav-link"><i class="fa fa-table me-2"></i>IP Logs</a>
             <a href="/filewatch" class="nav-item nav-link"><i class="fa fa-file me-2"></i>File Watcher</a>
             <a href="/settings" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Settings</a>
             <a href="/news" class="nav-item nav-link"><i class="fa fa-link me-2"></i>Security News</a>
-            <a href="/todo" class="nav-item nav-link"><i class="fa fa-list me-2"></i>To Do </a>
             <a href="/port_scanner" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Port Scan</a>
-            <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Virus Total</a> -->
+            <a href="/task-controller" class="nav-item nav-link"><i class="fa fa-tasks me-2"></i>Task Manager</a>
+            <a href="/todo" class="nav-item nav-link"><i class="fa fa-list me-2"></i>To Do </a>
+
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-bell me-2"></i>About DarkPan</a> -->
             <!-- <a href="/databreach" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Data Breach</a> -->
 
