--- a/secapp/templates/task_controller.html
+++ b/secapp/templates/task_controller.html
@@ -15,7 +15,7 @@ Task Manager
                 <th>Name</th>
                 <th>CPU (%)</th>
                 <th>Memory (%)</th>
-                <th>Process</th>
+                <th>Process Action</th>
             </tr>
         </thead>
         <tbody id="processTableBody">
