--- a/secapp/templates/partials/_eventlog.html
+++ b/secapp/templates/partials/_eventlog.html
@@ -15,7 +15,7 @@
 
         <button type="button" class="btn btn-primary" id="clear-event-logs-btn" data-bs-toggle="button"
             autocomplete="off">
-            Clear Event Logs <span id="clear-event-logs-icon"></span>
+            Clear Event Logs (Only PredictedValue = 0) <span id="clear-event-logs-icon"></span>
         </button>
 
         <input type="text" id="log-collector-status" class="form-control p-1 mt-2" value="Status here" readonly>
