--- a/secapp/templates/settings.html
+++ b/secapp/templates/settings.html
@@ -18,6 +18,9 @@ Settings
 
     <!-- Error Logs Controller -->
     {% include 'partials/_errorlogs.html' %}
+
+    <!-- Password Generator -->
+    {% include 'partials/_passgen.html' %}
 </div>
 
 <script>
