--- a/secapp/templates/port_scanner.html
+++ b/secapp/templates/port_scanner.html
@@ -11,22 +11,23 @@ Port Scan
         {% csrf_token %}
         <div class="form-group">
             <label for="ip_address">IP Address:</label>
-            <input type="text" id="ip_address" value="45.33.32.156" name="ip_address" class="form-control bg-white">
+            <input type="text" id="ip_address" value="45.33.32.156" name="ip_address" class="form-control bg-white"
+                pattern="^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$" title="Please enter a valid IP address.">
         </div>
-        <div class="form-group">
-            <label for="port_min">Starting Port:</label>
+        <div class="form-group mt-2">
+            <label for="port_min">Starting Port :</label>
             <input type="number" id="port_min" name="port_min" min="1" max="65535" value="5"
                 class="form-control bg-white">
         </div>
-        <div class="form-group">
+        <div class="form-group mt-2">
             <label for="port_max">Ending Port:</label>
             <input type="number" id="port_max" name="port_max" min="1" max="65535" value="25"
                 class="form-control bg-white">
         </div>
-        <button type="button" id="submitBtn" class="btn btn-primary mt-2 mb-2">Submit</button>
+        <button type="button" id="submitBtn" class="btn btn-primary mt-3">Submit</button>
     </form>
 
-    <div id="loadingSpinner" class="spinner-border text-primary" style="display: none;"></div>
+    <div id="loadingSpinner" class="spinner-border text-primary mt-3" style="display: none;"></div>
 
     <div id="results"></div>
 
@@ -37,12 +38,22 @@ Port Scan
 <script>
     $(document).ready(function () {
         $('#submitBtn').on('click', function () {
+            var ip_address = document.getElementById('ip_address').value;
+            if (!validateIPaddress(ip_address)) {
+                alert("You have entered an invalid IP address!");
+                return; // Don't proceed with the AJAX request
+            }
+
+            // Hide the submit button
+            $('#submitBtn').hide();
+            // Show the loading spinner
             $('#loadingSpinner').show();
             $.ajax({
                 url: '/port_scanner/',
                 type: 'post',
                 data: $('#scanForm').serialize(),
                 success: function (data) {
+                    // Hide the loading spinner
                     $('#loadingSpinner').hide();
                     // AJAX isteği başarılı olduğunda yönlendirme yap
                     window.location.href = "{% url 'port_results' %}";
@@ -50,6 +61,13 @@ Port Scan
             });
         });
     });
-</script>
 
+    function validateIPaddress(ipaddress) {
+        var ipRegex = /^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$/;
+        if (ipaddress.match(ipRegex)) {
+            return true;
+        }
+        return false;
+    }
+</script>
 {% endblock %}
