--- a/secapp/templates/add_rule.html
+++ b/secapp/templates/add_rule.html
@@ -5,6 +5,7 @@ Add New Firewall Rule
 {% endblock %}
 
 {% block content %}
+
 <div class="container pt-4 px-4">
     <h1>Add New Firewall Rule</h1>
     <form method="post">
@@ -49,6 +50,14 @@ Add New Firewall Rule
             <input type="text" class="form-control" id="destination_port" name="destination_port">
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
+
+        {% if error %}
+        <div class="alert alert-danger mt-2" role="alert">
+            {{ error }}
+        </div>
+        {% endif %}
     </form>
 </div>
+
+
 {% endblock %}
