--- a/secapp/templates/task_controller.html
+++ b/secapp/templates/task_controller.html
@@ -38,7 +38,7 @@ Task Manager
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" id="killProcessButton">Kill Process</button>
+                <!-- <button type="button" class="btn btn-danger" id="killProcessButton">Kill Process</button> -->
             </div>
         </div>
     </div>
