--- a/secapp/templates/partials/_passgen.html
+++ b/secapp/templates/partials/_passgen.html
@@ -29,9 +29,12 @@
                 <div class="toast" id="copyToast" style="position: absolute; top: 0; right: 0;" data-delay="2000">
                     <div class="toast-header">
                         <strong class="mr-auto">Password Generator</strong>
-                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                        <!-- Close Toast -->
+                        <!-- 
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button> 
+                        -->
                     </div>
                     <div class="toast-body">
                         Password copied to clipboard.
