--- a/secapp/templates/partials/_sidebar.html
+++ b/secapp/templates/partials/_sidebar.html
@@ -34,7 +34,7 @@
             <a href="/port_scanner" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Port Scan</a>
             <a href="/task-controller" class="nav-item nav-link"><i class="fa fa-tasks me-2"></i>Task Manager</a>
             <a href="/arp_monitor" class="nav-item nav-link"><i class="fa fa-network-wired me-2"></i>ARP Monitor</a>
-            <a href="/firewall_monitor" class="nav-item nav-link"><i class="fa fa-network-wired me-2"></i>Firewall Monitor</a>
+            <a href="/firewall_monitor" class="nav-item nav-link"><i class="fas fa-shield-alt me-2"></i>Firewall Monitor</a>
             <a href="/search" class="nav-item nav-link"><i class="fa fa-search me-2"></i>Search with Dork</a>
 
             
