--- a/secapp/templates/partials/_passgen.html
+++ b/secapp/templates/partials/_passgen.html
@@ -3,43 +3,34 @@
         PassGen
     </div>
     <div class="card-body">
-        <!-- IPController.py control form -->
-        <div class="row mt-4">
-            <div class="col-md-6 offset-md-3">
-                <input type="number" id="length" class="form-control" placeholder="Password Length (Max 99)" min="1"
-                    max="99" value="18">
-                <div class="form-check mt-2">
-                    <input class="form-check-input" type="checkbox" value="" id="uppercase" checked>
-                    <label class="form-check-label" for="uppercase">Include Uppercase Letters</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="numbers" checked>
-                    <label class="form-check-label" for="numbers">Include Numbers</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="symbols" checked>
-                    <label class="form-check-label" for="symbols">Include Symbols</label>
-                </div>
-                <button class="btn btn-primary mt-3" id="generate">Generate Password</button>
+        <div class="col-4">
+            <input type="number" id="length" class="form-control" placeholder="Password Length (Max 50)" min="1"
+                max="200" value="30">
+        </div>
+        <div class="form-check mt-2">
+            <input class="form-check-input" type="checkbox" value="" id="uppercase" checked>
+            <label class="form-check-label" for="uppercase">Include Uppercase Letters</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="numbers" checked>
+            <label class="form-check-label" for="numbers">Include Numbers</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="symbols" checked>
+            <label class="form-check-label" for="symbols">Include Symbols</label>
+        </div>
+        <button class="btn btn-primary mt-3" id="generate">Generate Password</button>
 
-                <!-- Password input -->
-                <input type="text" id="password" class="form-control mt-3" readonly onclick="copyPassword()">
+        <!-- Password input -->
+        <input type="text" id="password" class="form-control mt-3" readonly onclick="copyPassword()">
 
-                <!-- Toast notification -->
-                <div class="toast" id="copyToast" style="position: absolute; top: 0; right: 0;" data-delay="2000">
-                    <div class="toast-header">
-                        <strong class="mr-auto">Password Generator</strong>
-                        <!-- Close Toast -->
-                        <!-- 
-                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button> 
-                        -->
-                    </div>
-                    <div class="toast-body">
-                        Password copied to clipboard.
-                    </div>
-                </div>
+        <!-- Toast notification -->
+        <div class="toast" id="copyToast" style="position: absolute; top: 0; right: 0;" data-delay="2000">
+            <div class="toast-header">
+                <strong class="mr-auto">Password Generator</strong>
+            </div>
+            <div class="toast-body">
+                Password copied to clipboard.
             </div>
         </div>
     </div>
